<resources>
    <string name="app_name">TatuaTraffic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">enter email</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered">New Member?</string>
    <string name="login">Login</string>
    <string name="passHint">enter password</string>
    <string name="already_member">Member?</string>
    <string name="login_vector">Login vector resource</string>
    <string name="sign_up_vector">Sign up vector resource</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="JonDoe">jondoe@gmail.com</string>
    <string name="dots">...........</string>
    <string name="todo">TODO</string>
</resources>
