<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_gradient"
    android:orientation="vertical"
    tools:context=".LoginFragment">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:contentDescription="@string/login_vector"
                android:layout_marginTop="100dp"
                android:src="@drawable/ic_vehicle_login"/>
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:ems="10"
                android:autofillHints="@string/dots"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_account"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginStart="40dp"/>
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passHint"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:ems="10"
                android:autofillHints="@string/dots"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_lock"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_marginStart="40dp"/>
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/login_background"
                android:text="@string/login"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="false"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/not_registered"
                    android:layout_marginStart="20dp" />
                <TextView
                    android:id="@+id/sign_up_if_not_member"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/sign_up"
                    android:layout_marginStart="20dp" />

            </LinearLayout>



</LinearLayout>